Pixel_Perfect_Commit

--- a/Marvel/css/main.css
+++ b/Marvel/css/main.css
@@ -9,7 +9,7 @@ h2 {
   font: 91px Montserrat, sans-serif;
   text-transform: uppercase;
   font-weight: bolder;
-  padding-top: 80px;
+  padding-top: 70px;
 }
 
 h3 {
@@ -17,7 +17,7 @@ h3 {
   text-transform: uppercase;
   font-weight: 700;
   color: #FFF;
-  padding-top: 265px;
+  padding-top: 255px;
 }
 
 h4 {
@@ -52,32 +52,39 @@ p {
 }
 
 .top_header h1 {
-  padding-top: 580px;
+  padding-top: 490px;
   font: 60px Montserrat, sans-serif;
   text-transform: uppercase;
-  padding-left: 50px;
+  padding-left: 0px;
   font-weight: 800;
   color: #444444;
 }
 
 .top_header p {
-  padding-top: 85px;
+  padding-top: 65px;
   font: 13px Lato, sans-serif;
   color: #878787;
   max-width: 765px;
+  line-height: 1.8;
 }
 
 .top_header form {
-  padding-bottom: 310px;
+  padding-bottom: 229px;
+}
+
+.top_header .form-main-button button {
+  font: 16px Montserrat, sans-serif;
+  font-weight: 700;
+  padding: 19px 33px 15px 33px;
 }
 
 .form-main-button button {
   font: 16px Montserrat, sans-serif;
-  font-weight: 600;
-  padding: 20px 30px;
+  font-weight: 900;
+  padding: 19px 33px;
   color: #444444;
   border: 1px solid #444444;
-  margin-top: 20px;
+  margin-top: 18px;
   background-color: #FFFFFF;
 }
 
@@ -105,21 +112,22 @@ p {
 .header_menu img {
   width: 186px;
   height: 33px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 24px;
+  margin-bottom: 22px;
+  margin-left: 4px;
 }
 
 .header_menu ul {
   display: flex;
   justify-content: space-between;
-  margin-right: 50px;
+  margin-right: 45px;
 }
 
 .ul_menu li {
   font: 14px Montserrat, sans-serif;
   cursor: pointer;
   padding-right: 65px;
-  margin-top: 28px;
+  margin-top: 30px;
   margin-bottom: 28px;
 }
 
@@ -162,20 +170,23 @@ ul.ul_menu li:last-child {
   font-weight: 400;
   max-width: 945px;
   margin: 0 auto;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
   color: #757575;
+  line-height: 1.8;
 }
 
 .page_about .form-main-button button {
   font: 18px Montserrat, sans-serif;
-  padding: 20px 0px;
-  width: 220px;
+  padding-top: 20px;
+  padding-bottom: 18px;
+  min-width: 220px;
   border: 1px solid #444444;
   font-weight: 500;
   text-transform: none;
   color: #FFE400;
   background-color: #000;
   margin-right: 15px;
+  margin-bottom: 82px;
 }
 
 .page_about .form-main-button button:last-child {
@@ -189,8 +200,8 @@ ul.ul_menu li:last-child {
 }
 
 .first_content_text_block {
-  padding-top: 85px;
-  padding-bottom: 185px;
+  padding-top: 0px;
+  padding-bottom: 175px;
   max-width: 1140px;
   margin: 0 auto;
   display: grid;
@@ -216,7 +227,7 @@ ul.ul_menu li:last-child {
 
 .first_c_text_block h6 {
   font: 24px Montserrat, sans-serif;
-  padding-bottom: 130px;
+  padding-bottom: 125px;
   font-weight: 700;
 }
 
@@ -259,7 +270,7 @@ ul.ul_menu li:last-child {
   text-transform: uppercase;
   font-weight: 700;
   text-align: center;
-  margin-bottom: 120px;
+  margin-bottom: 108px;
 }
 
 .container_to_first_statistics {
@@ -276,7 +287,7 @@ ul.ul_menu li:last-child {
 }
 
 .first_statistics p:first-child {
-  font: 36px Montserrat, sans-serif;
+  font: 42px Montserrat, sans-serif;
   color: #444444;
   text-transform: uppercase;
   font-weight: 700;
@@ -285,7 +296,7 @@ ul.ul_menu li:last-child {
 .first_statistics p:last-child {
   font: 12px Montserrat, sans-serif;
   color: #878787;
-  padding-bottom: 145px;
+  padding-bottom: 148px;
 }
 
 /* Second Block   */
@@ -301,27 +312,31 @@ ul.ul_menu li:last-child {
 }
 
 .responsive_page h2 {
-  padding-top: 175px;
+  padding-top: 155px;
   margin-left: -8px;
   color: #FFE400;
+  font-size: 70px;
 }
 
 .responsive_page h4 {
   font-weight: 800;
+  margin-top: -46px;
 }
 
 .responsive_page p {
   max-width: 555px;
   color: #757575;
+  padding-top: 25px;
+  line-height: 1.8;
 }
 
 .ul_second_block_list {
-  margin-top: 50px;
+  margin-top: 28px;
   color: #757575;
 }
 
 .ul_second_block_list li {
-  padding-top: 18px;
+  padding-top: 17.5px;
 }
 
 .ul_second_block_list li:last-child {
@@ -332,7 +347,7 @@ ul.ul_menu li:last-child {
   font: 13px Montserrat, sans-serif;
   color: #000;
   background-color: #FFE400;
-  padding: 16px 25px;
+  padding: 13px 26px;
   border: 0px solid #FFE400;
   font-weight: bolder;
   text-transform: uppercase;
@@ -344,7 +359,7 @@ ul.ul_menu li:last-child {
 }
 
 .responsive_page .form-block-button {
-  padding-bottom: 115px;
+  padding-bottom: 116px;
 }
 
 /* Third Block   */
@@ -364,17 +379,19 @@ ul.ul_menu li:last-child {
   color: #F3F3F3;
   max-width: 750px;
   margin: 0 auto;
-  padding-top: 40px;
-  padding-bottom: 70px;
+  padding-top: 25px;
+  line-height: 1.8;
+  padding-bottom: 63px;
 }
 
 .marvel_who_we_are .form-main-button button {
   font: 18px Montserrat, sans-serif;
   padding: 20px 0px;
+  padding-bottom: 19px;
   width: 225px;
   font-weight: 500;
   margin-top: 0px;
-  margin-bottom: 125px;
+  margin-bottom: 136px;
   text-transform: none;
   margin-right: 15px;
   color: #FFF;
@@ -397,15 +414,19 @@ ul.ul_menu li:last-child {
   max-width: 1140px;
   margin: 0 auto;
   text-align: center;
-  padding-bottom: 170px;
+  padding-bottom: 165px;
+}
+
+.features_page h2 {
+  padding-top: 105px;
 }
 
 .fourth_content_blocks {
-  padding-top: 50px;
+  padding-top: 110px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 30px;
-  grid-row-gap: 50px;
+  grid-row-gap: 65px;
   text-align: left;
 }
 
@@ -427,6 +448,7 @@ ul.ul_menu li:last-child {
 
 .fourth_similar_block_text p {
   color: #757575;
+  line-height: 1.8;
 }
 
 .fourth_similar_block_circle {
@@ -473,6 +495,16 @@ ul.ul_menu li:last-child {
 
 .work_page h2 {
   color: #E8D100;
+  padding-top: 85px;
+}
+
+.work_page h4 {
+  font-weight: 800;
+  color: #000;
+}
+
+.work_page_buttons {
+  padding-top: 40px;
 }
 
 .work_page_buttons .form-block-button button {
@@ -480,10 +512,12 @@ ul.ul_menu li:last-child {
   color: #000;
   background-color: inherit;
   border: 1px solid #000;
-  width: 95px;
+  margin-right: 3px;
+  padding-left: 15px;
+  padding-right: 15px;
   font-weight: 700;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .work_page_buttons .form-block-button button:hover {
@@ -493,7 +527,7 @@ ul.ul_menu li:last-child {
 }
 
 .work_page_buttons .form-block-button button:last-child {
-  width: 105px;
+  margin-right: 0px;
 }
 
 .work_page_buttons .form-block-button i {
@@ -501,7 +535,8 @@ ul.ul_menu li:last-child {
   color: #fff;
   background-color: #000;
   border: 1px solid #000;
-  padding: 11px;
+  padding: 10px;
+  margin-right: 5px;
 }
 
 .work_page_buttons .form-block-button i:hover {
@@ -620,11 +655,11 @@ ul.ul_menu li:last-child {
 }
 
 .service_page h2 {
-  padding-top: 140px;
+  padding-top: 135px;
 }
 
 .service_page_content {
-  padding-top: 75px;
+  padding-top: 77px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 30px;
@@ -640,7 +675,7 @@ ul.ul_menu li:last-child {
 
 .service_page_content_block i {
   padding-top: 45px;
-  font-size: 32px;
+  font-size: 40px;
   color: #444444;
 }
 
@@ -653,9 +688,10 @@ ul.ul_menu li:last-child {
 }
 
 .service_page_content_block p {
-  padding-top: 35px;
-  padding-bottom: 60px;
+  padding-top: 25px;
+  padding-bottom: 55px;
   text-align: center;
+  line-height: 1.8;
   color: #757575;
 }
 
@@ -674,10 +710,11 @@ ul.ul_menu li:last-child {
 
 .pricing_page h2 {
   color: #E8D100;
+  padding-top: 85px;
 }
 
 .seven_price_blocks {
-  padding-top: 150px;
+  padding-top: 152px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 30px;
@@ -722,13 +759,16 @@ ul.ul_menu li:last-child {
 
 .top_content_price_block h6 {
   padding-top: 25px;
-  padding-bottom: 25px;
-  font: 18px Poppins, sans-serif;
+  padding-bottom: 15px;
+  font: 15px Poppins, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
   font-weight: 500;
 }
 
 .top_content_price_block p:last-child {
-  padding-bottom: 40px;
+  padding-bottom: 38px;
+  font-size: 13px;
 }
 
 .price_per_month {
@@ -738,18 +778,19 @@ ul.ul_menu li:last-child {
 
 .price_per_month p:nth-child(1) {
   padding-top: 8px;
-  font: 26px Poppins, sans-serif;
+  font: 30px Poppins, sans-serif;
 }
 
 .price_per_month p:nth-child(2) {
-  font: 48px Poppins, sans-serif;
+  font: 60px Poppins, sans-serif;
   font-weight: 700;
 }
 
 .price_per_month p:nth-child(3) {
-  padding-top: 35px;
+  padding-top: 50px;
   padding-left: 5px;
-  font: 14px Poppins, sans-serif;
+  padding-bottom: 28px;
+  font: 12px Poppins, sans-serif;
 }
 
 .main_content_price_block {
@@ -759,24 +800,24 @@ ul.ul_menu li:last-child {
 
 .main_content_price_block p {
   color: #808080;
-  font: 13px Muli, sans-serif;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  font: 12px Muli, sans-serif;
+  padding-top: 22px;
+  padding-bottom: 22px;
   border-bottom: 1px solid #E8E8E8;
 }
 
 .form-price_bottom-button {
-  margin-top: 5px;
-  padding-bottom: 105px;
+  margin-top: 4px;
+  padding-bottom: 107px;
 }
 
 .form-price_bottom-button button {
   font: 14px Montserrat, sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   color: #444444;
   background-color: #FFF;
-  padding-top: 16px;
-  padding-bottom: 14px;
+  padding-top: 14px;
+  padding-bottom: 13px;
   width: 360px;
   border: 0px;
 }
@@ -791,18 +832,18 @@ ul.ul_menu li:last-child {
   max-width: 1140px;
   margin: 0 auto;
   text-align: center;
-  padding-bottom: 450px;
+  padding-bottom: 358px;
 }
 
 .expert_page h2 {
-  padding-top: 250px;
+  padding-top: 230px;
 }
 
 .expert_content_blocks {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 30px;
-  padding-top: 110px;
+  padding-top: 106px;
 }
 
 .expert_block:hover {
@@ -912,8 +953,8 @@ ul.ul_menu li:last-child {
 }
 
 .text_about_expert h6 {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
+  padding-bottom: 23px;
   font: 11px Montserrat, sans-serif;
   color: #444444;
   font-weight: bolder;
@@ -935,6 +976,10 @@ ul.ul_menu li:last-child {
   text-transform: uppercase;
 }
 
+.text_about_expert {
+  margin-top: 6px;
+}
+
 /* Nine Block   */
 .ninth_content {
   background: url(../img/nine_backgorund.png);
@@ -949,7 +994,7 @@ ul.ul_menu li:last-child {
 }
 
 .impressed_by_our_work h3 {
-  padding-top: 110px;
+  padding-top: 100px;
   font: 30px Lato, sans-serif;
   color: #FFF;
   font-weight: bolder;
@@ -960,7 +1005,7 @@ ul.ul_menu li:last-child {
   padding-top: 5px;
   font: 13px Muli, sans-serif;
   color: #FFF;
-  padding-bottom: 80px;
+  padding-bottom: 86px;
 }
 
 .form-main-button button {
@@ -969,15 +1014,16 @@ ul.ul_menu li:last-child {
   font: 13px Lato, sans-serif;
   font-weight: 700;
   margin-bottom: 105px;
+  padding: 16px 25px;
+  margin-left: 10px;
   /*  width: 170px;*/
 }
 
-/*
-.form-main-button button:first-child{
-  background-color: $color_for_yellow;
-  margin-right: 15px;
+.form-main-button button:first-child {
+  background-color: #FFE400;
+  margin-left: 0px;
 }
-*/
+
 /*  Ten Content    */
 .tenth_content {
   max-width: 1140px;
@@ -986,7 +1032,11 @@ ul.ul_menu li:last-child {
 }
 
 .news_page h2 {
-  padding-top: 120px;
+  padding-top: 115px;
+}
+
+.news_page h4 {
+  font-weight: 700;
 }
 
 .left_hover_photo-news, .right_hover_photo-news {
@@ -1030,7 +1080,7 @@ ul.ul_menu li:last-child {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 30px;
-  padding-top: 100px;
+  padding-top: 94px;
 }
 
 .hover_news_video {
@@ -1078,7 +1128,7 @@ ul.ul_menu li:last-child {
   width: 60%;
   margin: 0 auto;
   margin-top: -23px;
-  margin-bottom: 20px;
+  margin-bottom: 27px;
   z-index: 2;
 }
 
@@ -1097,24 +1147,26 @@ ul.ul_menu li:last-child {
 }
 
 .text_to_ten_block p:last-child {
-  padding-top: 30px;
+  padding-top: 28px;
   font: 16px Muli, sans-serif;
   color: #757575;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .link_ten_block {
-  margin-top: 45px;
+  margin-top: 36px;
 }
 
 .link_ten_block a {
   text-decoration: none;
   text-transform: uppercase;
-  font: 10px Montserrat, sans-serif;
+  font: 9px Montserrat, sans-serif;
   font-weight: bolder;
   color: #444444;
   background-color: #F9F9F9;
-  padding: 10px 20px;
-  border-radius: 15px;
+  padding: 6px 16px;
+  border-radius: 13px;
   border: 2px solid  #F9F9F9;
 }
 
@@ -1129,7 +1181,7 @@ ul.ul_menu li:last-child {
   background: url(../img/eleven_backgorund.png);
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 175px;
+  margin-top: 166px;
 }
 
 .contact_page {
@@ -1178,7 +1230,7 @@ textarea {
   width: 145px;
   font: 17px Montserrat, sans-serif;
   font-weight: bolder;
-  margin-bottom: 135px;
+  margin-bottom: 141px;
   background-color: #FFE400;
 }
 
@@ -1202,7 +1254,7 @@ textarea {
 
 .footer_map p {
   padding-top: 65px;
-  padding-bottom: 75px;
+  padding-bottom: 61px;
   font: 30px Montserrat, sans-serif;
   font-weight: bolder;
 }
@@ -1251,7 +1303,7 @@ textarea {
   border-radius: 25px;
   border: 1px solid #E8E8E8;
   margin: 0 auto;
-  margin-top: 60px;
+  margin-top: 62px;
 }
 
 .footer_circle:hover {
@@ -1273,7 +1325,7 @@ textarea {
   font: 13px Muli, sans-serif;
   color: #FFF;
   padding-top: 15px;
-  padding-bottom: 75px;
+  padding-bottom: 83px;
 }
 
 .bottom_footer_bacground {
