Continue_Starting(HTML)

--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -76,6 +76,83 @@
           </div>
         </div>
       </div>
+      <div class="second_content">
+        <div class="responsive_page">
+          <h2>Responsive</h2>
+          <h4>Boost your website</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etia fermentum vel libero eget interdum semper libero.</p>
+          <ul class="ul_second_block_list">
+            <li><i class="fas fa-star">Responsive Design & Retina Ready.</i></li>
+            <li><i class="fas fa-star">Business Solution Any Company.</i></li>
+            <li><i class="fas fa-star">Powerful Admin Panel.</i></li>
+            <li><i class="fas fa-star">24/7 Support.</i></li>
+          </ul>
+          <!--button    -->
+        </div>
+      </div>
+      <div class="third_content">
+        <div class="marvel_who_we_are">
+          <h3>Who we are</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
+          <!--button-->
+        </div>
+      </div>
+      <div class="fourth_content">
+        <div class="features_page">
+          <h2>Features</h2>
+          <h4>We're creative crafting with love</h4>
+          <div class="fourth_content_blocks"></div>
+          <!--*9* fourth_similar_block  -->
+        </div>
+      </div>
+      <div class="fifth_content">
+        <div class="work_page">
+          <h2>Work</h2>
+          <h4>Our portfolio</h4>
+          <div class="work_page_buttons">
+            <!--button + icon-->
+          </div>
+        </div>
+        <div class="fifth_photos_block">
+          <!--*8* container_to_photos_block-->
+        </div>
+      </div>
+      <div class="sixth_background">
+        <div class="six_content">
+          <div class="service_page">
+            <h2>Service</h2>
+            <h4>Clean idea and unique design</h4>
+            <div class="service_page_content">
+              <!--*4* service_page_content_block-->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="seventh_content">
+        <div class="pricing_page">
+          <h2>Pricing</h2>
+          <h4>Choose your plan</h4>
+          <div class="seven_price_blocks">
+            <!--*3* seventh_price_block-->
+          </div>
+        </div>
+      </div>
+      <div class="eight_content">
+        <div class="expert_page">
+          <h2>Expert </h2>
+          <h4>Meet Team </h4>
+          <div class="expert_content_blocks">
+            <!-- *3* expert_block-->
+          </div>
+        </div>
+      </div>
+      <div class="ninth_content">
+        <div class="impressed_by_our_work">
+          <h3>Are you impressed by our work?</h3>
+          <p>Durabitur commodo ras non urna mauris mollis auctor proin laoreet</p>
+          <!--button-->
+        </div>
+      </div>
     </main>
   </body>
 </html>
