--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -19,7 +19,9 @@
         <div class="top_header">
           <h1>Creative and Professional</h1>
           <p>Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single end product which end users are not charged for.</p>
-          <!--+main_button('Contact us')  -->
+          <form class="form-main-button">
+                <button type="submit">Contact us</button>
+          </form>
         </div>
       </div>
     </div>
@@ -42,7 +44,10 @@
           <h2>About</h2>
           <h4>This is the one page polo</h4>
           <p>Molestie iltricies quam. Donec at sem. Prasent pretium. Maorbi quis nulla venicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore manga aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat</p>
-          <!--button  -->
+          <form class="form-main-button">
+                  <button type="submit">More Info</button>
+                  <button type="submit">Join Expreance</button>
+          </form>
         </div>
         <div class="first_content_text_block">
           <div class="first_c_text_block"><i class="fas fa-star-half-alt"></i>
@@ -82,12 +87,14 @@
           <h4>Boost your website</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etia fermentum vel libero eget interdum semper libero.</p>
           <ul class="ul_second_block_list">
-            <li><i class="fas fa-star">Responsive Design & Retina Ready.</i></li>
+            <li><i class="fas fa-star">Responsive Design &amp; Retina Ready.</i></li>
             <li><i class="fas fa-star">Business Solution Any Company.</i></li>
             <li><i class="fas fa-star">Powerful Admin Panel.</i></li>
             <li><i class="fas fa-star">24/7 Support.</i></li>
           </ul>
-          <!--button    -->
+          <form class="form-block-button">
+                  <button type="submit">Purchase</button>
+          </form>
         </div>
       </div>
       <div class="third_content">
@@ -151,6 +158,28 @@
           <h3>Are you impressed by our work?</h3>
           <p>Durabitur commodo ras non urna mauris mollis auctor proin laoreet</p>
           <!--button-->
+        </div>
+      </div>
+      <div class="eleven_content">
+        <div class="contact_page">
+          <h2>Contact </h2>
+          <h4>Send us Message</h4>
+          <div class="form_bottom">
+            <section class="personal-information">
+              <div class="block">
+                <div class="container_to_input">
+                  <input required type="text" placeholder="First Name">
+                  <input required type="text" placeholder="Last Name">
+                  <input required type="email" placeholder="Email">
+                  <input type="text" placeholder="Subject">
+                </div>
+              </div>
+              <div class="massage">
+                <textarea placeholder="Type your message"></textarea>
+                <!-- button-->
+              </div>
+            </section>
+          </div>
         </div>
       </div>
     </main>
