--- a/Marvel-With-Gulp/dest/views/other.html
+++ b/Marvel-With-Gulp/dest/views/other.html
@@ -19,7 +19,9 @@
         <div class="top_header">
           <h1>Creative and Professional</h1>
           <p>Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single end product which end users are not charged for.</p>
-          <!--+main_button('Contact us')  -->
+          <form class="form-main-button">
+                <button type="submit">Contact us</button>
+          </form>
         </div>
       </div>
     </div>
