--- a/Marvel-With-Gulp/src/views/sections/page_about.pug
+++ b/Marvel-With-Gulp/src/views/sections/page_about.pug
@@ -1,9 +1,12 @@
+include ../components/button
 div.first_content
   div.page_about
     h2 About
     h4 This is the one page polo
     p Molestie iltricies quam. Donec at sem. Prasent pretium. Maorbi quis nulla venicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore manga aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat
-    //button  
+    form.form-main-button
+      +main_button('More Info')
+      +main_button('Join Expreance')
   div.first_content_text_block
     div.first_c_text_block
       i(class="fas fa-star-half-alt")
